--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hiragana practice</title>
     <script src="jquery-2.1.4.min.js"></script>
     <script src="hiragana.js"></script>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="hiragana.css" />
 </head>
 <body>
     <div id="main">
