Few visual and feedback tweaks.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <p>in Romaji?</p>
 
         <p>
-            <input type="text" id="qanswer" placeholder="Type your answer..." />
+            <input type="text" id="qanswer" class="qanswer"
+                placeholder="Type your answer..." />
             <input type="button" id="qcontinue" value="Continue" />
         </p>
         <div style="height: 30px;">
