Slight refactor of visuals, added more Hiragana characters, introduced basic main menu.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,25 @@
     <link rel="stylesheet" href="hiragana.css" />
 </head>
 <body>
-    <div id="main">
+    <div class="main-menu" id="main-menu">
+        <ul>
+            <li>
+                <input type="button" value="Practice Hiragana to Romaji" />
+            </li>
+            <li>
+                <input type="button" value="Practice Romaji to Hiragana" />
+            </li>
+            <li>
+                <input type="button" value="Options" />
+            </li>
+            <li>
+                <input type="button" value="Credits" />
+            </li>
+        </ul>
+
+    </div>
+
+    <div class="hiragana-to-romaji" id="hiragana-to-romaji">
         <p>Your score: <span id="qscore">0 / 0</span></p>
 
         <p>How to write</p>
