Got rid of less/scss files as I do not use them atm and added missing css include.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         href="https://fonts.googleapis.com/css?family=Open+Sans" />
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" />
     <link rel="stylesheet" href="hiragana.css" />
+    <link rel="stylesheet" href="msgbox.css" />
 </head>
 <body>
     <div class="page" id="main-menu">
